# GODO_PI

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CODEBASE.md  DESIGN.md  Embedded_CheckPoint(Ko).md  Embedded_CheckPoint.md  FRONT_DESIGN.md  NEXT_SESSION.md  PROGRESS.md  SYSTEM_DESIGN.md
godo-webctl/: .gitignore  CODEBASE.md  README.md  pyproject.toml
godo-webctl/CODEBASE/: 2026-W17.md  2026-W18.md  2026-W19.md  README.md
godo-webctl/scripts/: godo-maps-migrate  godo-webctl-passwd  run-pi5-webctl-dev.sh
godo-webctl/src/godo_webctl/: __init__.py  __main__.py  activity.py  app.py  auth.py  backup.py  config.py  config_schema.py  config_view.py  constants.py  local_only.py  logs.py  map_backup.py  map_edit.py  map_image.py  map_origin.py  map_rotate.py  map_transform.py  mapping.py  mapping_sse.py  maps.py  pidfile.py  processes.py  protocol.py  resources.py  resources_extended.py  restart_pending.py  services.py  sidecar.py  sse.py  system_services.py  timestamps.py  uds_client.py  webctl_toml.py
godo-webctl/src/godo_webctl/static/: index.html
godo-webctl/systemd/: godo-local-window.service  godo-webctl.env.example  godo-webctl.service  install.md
godo-webctl/tests/: conftest.py  test_activity.py  test_app_hardware_tracker.py  test_app_integration.py  test_auth.py  test_backup.py  test_config.py  test_config_schema.py  test_config_schema_parity.py  test_config_view.py  test_constants.py  test_local_only.py  test_logs.py  test_main_lock.py  test_main_settings_augmenter.py  test_map_backup.py  test_map_edit.py  test_map_edit_concurrency.py  test_map_edit_sse_e2e.py  test_map_image.py  test_map_origin.py  test_map_rotate.py  test_map_transform.py  test_mapping.py  test_mapping_cp210x_recovery.py  test_mapping_precheck.py  test_mapping_sse.py  test_maps.py  test_pidfile.py  test_processes.py  test_protocol.py  test_resources.py  test_resources_extended.py  test_restart_pending.py  test_services.py  test_sidecar.py  test_sse.py  test_system_services.py  test_uds_client.py  test_webctl_toml.py
production/RPi5/: .gitignore  CMakeLists.txt  CODEBASE.md  README.md
production/RPi5/CODEBASE/: 2026-W17.md  2026-W18.md  2026-W19.md  README.md
production/RPi5/cmake/: rplidar_sdk.cmake  tomlplusplus.cmake
production/RPi5/doc/: convergence_hil.md  freed_wiring.md  gpio_wiring.md  irq_inventory.md  smoke.md  uds_protocol.md
production/RPi5/scripts/: build.sh  promote_smoke_to_ts.sh  run-pi5-freed-passthrough.sh  run-pi5-jitter.sh  run-pi5-smoke.sh  run-pi5-tracker-rt.sh  setup-pi5-rt.sh
production/RPi5/share/: godo-cp210x-recover.sh
production/RPi5/src/config/: CMakeLists.txt  apply.cpp  apply.hpp  atomic_toml_writer.cpp  atomic_toml_writer.hpp  restart_pending.cpp  restart_pending.hpp  validate.cpp  validate.hpp
production/RPi5/src/core/: CMakeLists.txt  config.cpp  config.hpp  config_defaults.hpp  config_schema.hpp  constants.hpp  hot_config.cpp  hot_config.hpp  pidfile.cpp  pidfile.hpp  rt_flags.cpp  rt_flags.hpp  rt_types.hpp  seqlock.hpp  time.hpp
production/RPi5/src/freed/: CMakeLists.txt  d1_parser.cpp  d1_parser.hpp  serial_reader.cpp  serial_reader.hpp
production/RPi5/src/godo_freed_passthrough/: CMakeLists.txt  main.cpp
production/RPi5/src/godo_jitter/: CMakeLists.txt  main.cpp
production/RPi5/src/godo_smoke/: CMakeLists.txt  args.cpp  args.hpp  csv_writer.cpp  csv_writer.hpp  lidar_source_rplidar.cpp  lidar_source_rplidar.hpp  main.cpp  sample.hpp  session_log.cpp  session_log.hpp  timestamp.cpp  timestamp.hpp
production/RPi5/src/godo_tracker_rt/: CMakeLists.txt  main.cpp
production/RPi5/src/gpio/: CMakeLists.txt  gpio_source.hpp  gpio_source_libgpiod.cpp  gpio_source_libgpiod.hpp
production/RPi5/src/lidar/: CMakeLists.txt  lidar_source_rplidar.cpp  lidar_source_rplidar.hpp  sample.hpp
production/RPi5/src/localization/: CMakeLists.txt  amcl.cpp  amcl.hpp  amcl_result.cpp  amcl_result.hpp  cold_writer.cpp  cold_writer.hpp  deadband.hpp  likelihood_field.cpp  likelihood_field.hpp  occupancy_grid.cpp  occupancy_grid.hpp  pose.cpp  pose.hpp  rng.cpp  rng.hpp  scan_ops.cpp  scan_ops.hpp
production/RPi5/src/parallel/: CMakeLists.txt  parallel_eval_pool.cpp  parallel_eval_pool.hpp
production/RPi5/src/rt/: CMakeLists.txt  amcl_rate.hpp  diag_publisher.cpp  diag_publisher.hpp  jitter_ring.hpp  jitter_stats.cpp  jitter_stats.hpp  rt_setup.cpp  rt_setup.hpp
production/RPi5/src/smoother/: CMakeLists.txt  offset_smoother.cpp  offset_smoother.hpp
production/RPi5/src/udp/: CMakeLists.txt  output_transform.cpp  output_transform.hpp  sender.cpp  sender.hpp  (+1 more)
production/RPi5/systemd/: 49-godo-systemctl.rules  99-rplidar.rules  99-rplidar.rules.template  README.md  godo-cp210x-recover.service  godo-irq-pin.service  godo-irq-pin.sh  godo-mapping@.env.example  godo-mapping@.service  godo-tracker.env.example  godo-tracker.service  install.sh
production/RPi5/tests/: CMakeLists.txt  bench_amcl_converge.cpp  bench_lf_rebuild.cpp  gpio_source_fake.hpp  lidar_source_fake.cpp  lidar_source_fake.hpp  test_amcl_components.cpp  test_amcl_parallel_eval.cpp  test_amcl_rate.cpp  test_amcl_scenarios.cpp  test_args.cpp  test_atomic_toml_writer.cpp  test_circular_stats.cpp  test_cold_writer_amcl_rate_records.cpp  test_cold_writer_live_iteration.cpp  test_cold_writer_live_pipelined.cpp  test_cold_writer_offset_invariant.cpp  test_cold_writer_ordering.cpp  test_cold_writer_reads_hot_config.cpp  test_cold_writer_scan_publish.cpp  test_config.cpp  test_config_apply.cpp  test_config_schema.cpp  test_config_validate.cpp  test_csv_parity.cpp  test_csv_writer_readback.cpp  test_csv_writer_writes.cpp  test_deadband.cpp  test_diag_publisher.cpp  test_freed_parser.cpp  test_freed_serial_reader.cpp  test_gpio_source_fake.cpp  test_gpio_source_libgpiod.cpp  test_hot_config.cpp  test_jitter_ring.cpp  test_jitter_stats.cpp  test_last_scan_seqlock_stress.cpp  test_lidar_live.cpp  test_likelihood_field.cpp  test_likelihood_field_parallel.cpp  (+20 more)
prototype/Python/: CODEBASE.md  README.md  pyproject.toml
prototype/Python/scripts/: capture.py
prototype/Python/tests/: test_csv_dump.py
(+313 files in other folders)
