[project]
name = "godo-webctl"
version = "0.1.0"
description = "GODO Phase 4-3 web control plane: operator HTTP for godo-tracker (UDS + map backup)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
godo-webctl = "godo_webctl.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/godo_webctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
    "hardware_tracker: integration test that requires a live godo_tracker_rt UDS socket at /run/godo/ctl.sock (skipped by default)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.extend-per-file-ignores]
# FastAPI's `Depends(...)` in default args is the framework-canonical
# pattern; B008 is a false positive here.
"src/godo_webctl/app.py" = ["B008"]
"src/godo_webctl/auth.py" = ["B008"]
# Tests legitimately use nested `with mock.patch(...)` + `pytest.raises(...)`;
# combining them per SIM117 hides which raise is being asserted.
"tests/test_auth.py" = ["SIM117"]
