[project]
name = "godo-webctl"
version = "0.1.0"
description = "GODO Phase 4-3 web control plane: operator HTTP for godo-tracker (UDS + map backup)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    # issue#14 — numpy needed for the godo-mapping pgm_encoder tests
    # which reuse this UV env via verify-no-hw.sh's --quick fallback.
    "numpy>=1.26",
    "hypothesis>=6.152.4",
]

[project.scripts]
godo-webctl = "godo_webctl.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/godo_webctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# `not hardware_tracker` excludes the live-tracker smoke test from the
# default `pytest` invocation. Run with `uv run pytest -m
# hardware_tracker` on a host whose godo_tracker_rt is up AND whose
# operator has authorised the Live→OneShot→Idle transition the test
# triggers (issue#28.2 cleanup, 2026-05-05).
addopts = "-ra -m 'not hardware_tracker'"
asyncio_mode = "auto"
markers = [
    "hardware_tracker: integration test that requires a live godo_tracker_rt UDS socket at /run/godo/ctl.sock (excluded from default `pytest` via `addopts -m 'not hardware_tracker'`; opt-in with `-m hardware_tracker`)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.extend-per-file-ignores]
# FastAPI's `Depends(...)` in default args is the framework-canonical
# pattern; B008 is a false positive here.
"src/godo_webctl/app.py" = ["B008"]
"src/godo_webctl/auth.py" = ["B008"]
# Tests legitimately use nested `with mock.patch(...)` + `pytest.raises(...)`;
# combining them per SIM117 hides which raise is being asserted.
"tests/test_auth.py" = ["SIM117"]
